Bug 59784 - Regression: touchpad no longer works with latest git evdev driver (bisected)
Summary: Regression: touchpad no longer works with latest git evdev driver (bisected)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-24 03:31 UTC by Jos van Wolput
Modified: 2013-01-31 23:58 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jos van Wolput 2013-01-24 03:31:14 UTC
Starting with xf86-input-evdev-2f67509b53b27dd7f51ca2aadd19605aee613a61,
Split rel and abs axis mapping into two separate arrays,2013-01-23,
by Peter Hutterer, my touchpad no longer works.
Comment 1 Peter Hutterer 2013-01-25 01:15:19 UTC
http://patchwork.freedesktop.org/patch/12934/
Comment 2 Jos van Wolput 2013-01-25 02:57:50 UTC
(In reply to comment #1)
> http://patchwork.freedesktop.org/patch/12934/

Applying your patch on input-evdev-2f6750 fixes this regression.
Thanks!
Comment 3 Peter Hutterer 2013-01-31 23:58:44 UTC
commit 2b8b0df62ec554952784f2820fb4143c495232b0
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Jan 24 16:18:48 2013 +1000

    Always init axis mapping for the first two rel axes (#59784)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.